stories/Molecules/ParallaxCard/parallaxCard.scss
@import '../../assets/scss/variables';
.parallax-card {
  display: flex;
  flex-flow: row wrap;
  align-items: center;

  &--link {
    border-bottom: none;
    display: block;
  }
  h3 {
    margin-bottom: 24px;
  }
  p {
    font-size: $font-size-16;
    line-height: 22px;
    margin-bottom: 26px;
    padding-bottom: 25px;
    border-bottom: solid 2px $color-black;
    padding-right: 12px;
    padding-left: 1.875rem;
    margin-left: -1.875rem;
  }

  &--right {
    flex-direction: row-reverse;
    p {
      padding-left: 12px;
      padding-right: 1.875rem;
      margin-right: -1.875rem;
      margin-left: -12px;
    }
  }
}

